--- a/table_name.ini
+++ b/table_name.ini
@@ -1,33 +1,41 @@
 [base_config]
-write1transfer2=1
-nonce=777
+write1transfer2=0
+nonce=7771
 [table_name];描述的不要太模糊
 tablename_sure=share_personal_loss_report
 tablename_un_sure=share_deposit_report,sys_position,sys_duty,sys_unit
 ;table_name_un部分是以这个东西开头
-[Database2connect_ini]
-ip=10.10.0.39
-user=root
-password=kjk7753
+[resource]
+host=10.10.0.39
+user=readonlyboy
+passwd=readonlyboy
 db=ywpolice
-[c2c]
-ip=10.10.0.38
+autocommit=True
+charset=utf8mb4
+[target]
+host=10.10.0.38
 user=root
-password=hufeihufei
+passwd=hufeihufei
 db=ywpolice
+autocommit=True
+charset=utf8mb4
 ;
-;under_Staff is the test part
+;#######under_Stuff is the test part
 ;
-[local_test]
-ip=localhost
+[resource_test]
+host=localhost
 user=root
 password=123456
-db=gatjkm
+db=django_vue_admin
+autocommit=True
+charset=utf8mb4
+[target_test]
+host=localhost
+user=root
+passwd=123456
+db=pearadminflask
+autocommit=True
+charset=utf8mb4
 [table_name_test]
 tablename_sure=gatjkm_new
 tablename_un_sure=hang
-[Database2connect_ini_test]
-ip=47.241.18.93
-user=root
-password=Hfgood617
-db=gatjkm
